--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 	      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	    <![endif]-->
-	    <script async="" src="files/analytics.js"></script>
 	    <script src="files/modernizr.js"></script> <!-- Modernizr -->
 
 	    <!-- FAV AND TOUCH ICONS -->
@@ -81,7 +80,23 @@
 										</div> <!--/ .row -->
 										<!--/ End Hero Subscribe -->
 									</div> <!--/ .col-lg-12 -->
+
 								</div> <!--/ .row -->
+
+
+				<div class="row" id="main-footer">
+					<ul class="footer-social">
+						<li><a href="https://www.facebook.com/bookleforkids">Join us on <span class="icon-facebook3"></span></a></li>
+<!--						
+						<li><a href="#"><span class="icon-twitter3"></span></a></li>
+						<li><a href="#"><span class="icon-google-plus3"></span></a></li>
+-->						
+					</ul> <!--/ .footer-social -->
+
+				</div> <!--/ .row -->
+
+
+
 								<!-- END Hero Content -->
 
 							</div> <!--/ .vertical-center-content -->
