Update facebook link

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 				<div class="row" id="main-footer">
 					<ul class="footer-social">
-						<li><a href="https://www.facebook.com/bookleforkids">Join us on <span class="icon-facebook3"></span></a></li>
+						<li><a href="https://www.facebook.com/bookleforkids">Join us on Facebook<span class="icon-facebook3"></span></a></li>
 <!--						
 						<li><a href="#"><span class="icon-twitter3"></span></a></li>
 						<li><a href="#"><span class="icon-google-plus3"></span></a></li>
