Update facebook link

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 											</div><!--/ .hero-subscribe-wrapper -->
 										</div> <!--/ .row -->
-										<div class="row" id="main-footer">
+										<div class="row" >
 											<ul class="footer-social">
 												<li><a href="https://www.facebook.com/bookleforkids" style="color: #f6a006;">Join us on Facebook <span class="icon-facebook3"></span></a></li>
 												<li><div class="fb-like" data-href="https://www.facebook.com/bookleforkids" data-layout="button_count" data-action="recommend" data-show-faces="true" data-share="true"></div></li>
