--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<div class="hero-content row centered">
 									<div class="col-lg-12">
 
-										<p class="lead all-caps text-shadow-small" style="visibility: visible; ">Bookle for kids</p>
+										<p class="lead text-shadow-small" style="visibility: visible; font-weight: 600">Bookle (bu:kl ... <span style="font-size: 12px">like Google</span>) for kids</p>
 
 										<h1 class="all-caps text-shadow-medium" style="visibility: visible; ">Want your kids to read more?</h1>
 
