Added social proof

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 										<p class="lead text-shadow-small" style="visibility: visible; font-weight: 600">Bookle (bu:kl ... <span style="font-size: 12px">like Google</span>) for kids</p>
 
 										<h1 class="all-caps text-shadow-medium" style="visibility: visible; ">Want your kids to read more?</h1>
+ 
+										<p class="lead text-shadow-small" style="visibility: visible;">Join hundreds of other moms and dads in their quest to discover more books to read</p>
 
 										<!-- BEGIN Hero Subscribe -->
 										<div class="row">
